# evo_studio

./: README.md
crates/app_shell/: Cargo.toml
crates/app_shell/.cargo/: config.toml
crates/app_shell/src/: app.rs  lib.rs  main.rs
crates/app_shell/src/app/: model.rs
crates/app_shell/src/renderer/: mod.rs  renderer.rs  snapshot.rs
crates/app_shell/src/runner/: mod.rs  runner.rs
crates/app_shell/src/scene/: acetate.rs  colors.rs  layer_manager.rs  layout.rs  metrics.rs  mod.rs  state.rs
crates/app_shell/src/scene/acetates/: mod.rs
crates/app_shell/src/scene/acetates/activity_bar/: actions.rs  component.rs  events.rs  hit.rs  layout.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/activity_bar/item/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/editor_area/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/panel/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/sidebar/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/status_bar/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/scene/acetates/title_bar/: component.rs  events.rs  mod.rs  view.rs
crates/app_shell/src/sketcher/: codomain.rs  display.rs  domain.rs  emitter.rs  mod.rs  sketcher.rs
crates/app_shell/src/text/: engine.rs  mod.rs
